--- a/Source/PriorityMod v3/PriorityMod v3.csproj
+++ b/Source/PriorityMod v3/PriorityMod v3.csproj
@@ -18,7 +18,7 @@
     <DebugSymbols>false</DebugSymbols>
     <DebugType>none</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\1.3\Assemblies\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -37,9 +37,7 @@
     <Compile Include="Core\PriorityMaster.cs" />
     <Compile Include="Core\UIResources.cs" />
     <Compile Include="CrossCompat\Port.cs" />
-    <Compile Include="Extensions\ColorExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
-    <Compile Include="Extensions\UnityExtensions.cs" />
     <Compile Include="PatchesV3\PatchHelper.cs" />
     <Compile Include="PatchesV3\PriorityPatches.cs" />
     <Compile Include="PatchesV3\UIPatches.cs" />
@@ -55,7 +53,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Settings\PrioritySettings.cs" />
-    <Compile Include="Tools\Utils.cs" />
+    <Compile Include="Tools\SimpleColor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\Settings.settings">
