--- a/Source/PriorityMod v3/PriorityMod v3.csproj
+++ b/Source/PriorityMod v3/PriorityMod v3.csproj
@@ -38,7 +38,7 @@
     <Compile Include="Core\UIResources.cs" />
     <Compile Include="CrossCompat\Port.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
-    <Compile Include="PatchesV3\Compat\MultiplayerPatches.cs" />
+    <Compile Include="PatchesV3\Compat\MultiplayerCompat.cs" />
     <Compile Include="PatchesV3\PatchHelper.cs" />
     <Compile Include="PatchesV3\PriorityPatches.cs" />
     <Compile Include="PatchesV3\UIPatches.cs" />
