--- a/Source/PriorityMod v4/PriorityMod v4.csproj
+++ b/Source/PriorityMod v4/PriorityMod v4.csproj
@@ -40,8 +40,7 @@
     <Compile Include="PatchesV4\Compat\CentricWorkPatches.cs" />
     <Compile Include="PatchesV4\Compat\FluffyWorkTabPatches.cs" />
     <Compile Include="PatchesV4\Compat\PlugAndPlayJoinerPatches.cs" />
-    <Compile Include="PatchesV4\Multiplayer\IMPWatcher.cs" />
-    <Compile Include="PatchesV4\Multiplayer\MultiplayerCompat.cs" />
+    <Compile Include="PatchesV4\Compat\MultiplayerCompat.cs" />
     <Compile Include="PatchesV4\PatchHelper.cs" />
     <Compile Include="PatchesV4\PatchSettings.cs" />
     <Compile Include="PatchesV4\RestartPatches.cs" />
