Add support for Mech Work Tab

--- a/Source/PriorityMod v5/PriorityMod v5.csproj
+++ b/Source/PriorityMod v5/PriorityMod v5.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="PatchesV5\Compat\CentricWorkPatches.cs" />
     <Compile Include="PatchesV5\Compat\FluffyWorkTabPatches.cs" />
+    <Compile Include="PatchesV5\Compat\MechWorkTabPatches.cs" />
     <Compile Include="PatchesV5\Compat\MultiplayerCompat.cs" />
     <Compile Include="PatchesV5\Compat\PlugAndPlayJoinerPatches.cs" />
     <Compile Include="PatchesV5\PatchHelper.cs" />
